Chapter two almost done!
Needs to pass Jamie inspection

--- a/ubcothesis/ubc_2015_spring_kudlac_raffi.tex
+++ b/ubcothesis/ubc_2015_spring_kudlac_raffi.tex
@@ -99,27 +99,188 @@ much energy as fossil fuels. The users' main objective is to survive for as long
 their previous time. 
 
 \chapter{Energy Today}
-	In our society today almost all electrical energy is converted in the same way, converting kinetic 	
-to moving this magnet. In almost all designs the magnet is connected to a turbine,which can be rotated, so 
-that if the turbine obtains kinetic energy it can be transferred to the magnet. How the turbine acquires 
-kinetic energy is different depending on the sours of energy. In the case of Fossil fuels and nuclear 
-power, all that is happening is that water is being turned into steam and then the steam is used like wind 
-to turn the turbine to make power. In the case of hydro power, the flowing water turns the turbine and in 
-the case of wind power the turbine is physically connected to the rotating blades throughout the shaft of 
-the windmill. 
+  In our society today almost all our energy that runs our homes and businesses is created in the same way 
+It could be argued that, Micheal Faraday, the inventor of the concept of the generator had the biggest 
+effect on the development of our society. In the early 1800's Micheal discovered that a magnet traveling 
+through a coiled wire could generate a current and that once a current was generated it could be redirected 
+to wherever it was needed. This concept is at the core of all our power generation.
+
+\section{Generators}
+  
+  All generators operate in the same way of transferring kinetic energy into electrical energy. Some do 
+  this buy having a stationary coil and moving a magnet through the coil as shown below or some have a 
+  stationary magnet and move a coil through the magnetic field created by the magnet. It doesn't matter 
+  which method is used, the same rules of physics are being applied and both ways achieve the result of a 
+  flowing current. The faster the movement of the coil or magnet the more current that will be generated. 
+  The more current that is generated to power there is to use. Generators have a couple more components to 
+  them, gas chambers, rotating pistons ect.. these are all just tools used to convert the potential energy 
+  of the power sourse into kinetic energy and finally into the desired electrical energy. This is at the 
+  heart of all major production methods of power 
+  as discussed below. 
+
+  \begin{figure}[hbt]{\label{Induction} }
+  \begin{center}
+    \includegraphics[width=0.3\textwidth]{Induction}
+    \caption[Generator Mechanics]{Generator Mechanics}  
+  \end{center}
+\end{figure}
+
+\newpage
+  \section{Fossil Fuels}
+
+  All Fossil fuel plants work in the same way, they burn a substance to heat water, that is turned into 
+  steam that is then fed to flow past a turbine. The steam pushes the turbine which is connected to a 
+  generator. This feeds kinetic energy to the generator which then turns the energy into electrical energy 
+  for people to use.
+
+Fossil fuel plants only differ in the substance that they burn, and some different protocols and buildings 
+to handle the substances but the process is the same for all. Once the substance is burned the heat is 
+transferred into water. In order to obtain as much energy as possible the water is kept under pressure 
+making it able to be heated to temperatures much higher then $100^\circ$ C. Once the water is at a 
+desired temperature it is fed through a series of pipes where it enters another chamber. In this chamber 
+the water leaves the pipes at extraordinary speeds and instantly turned into steam as the pressure keeping 
+the water in liquid form is being released. The fast moving steam pushes against a turbine causing it to 
+move. In turn components in the generator are being turned and a current in generated. This is shown in figure \ref{FossilFuelCycle} which specifically shows the process of a coal power plant. 
+
+   \begin{figure}[hbt] \label{FossilFuelCycle} 
+  \centering    
+    \includegraphics[width=1\textwidth]{fossil_fuel}
+    \caption[Fossil Fuel Cycle]{Fossil Fuel Cycle}  
+    
+\end{figure}
+
+\newpage
+
+In order to save water the steam is collected and condensed back into water to be used again. Plants are 
+usually built around a water source as water needs to switched out at times to cool components of the plant 
+and since plants use water to function it convientient to have a water source close by.
+ When water gets cycled out of the plant and back into the water source it is warm and can have negative 
+ effects on wildlife. Imagine if someone cranked the heating in your house to $40^\circ$ C, how would you 
+ like it?
+
+Fossil fuel power plant generally produce large amounts of power and the price of fossil fuels is generally 
+cheap but they have huge environmental consequences such as carbon dioxide. Fossil fuel plants also run on 
+a limited resource and once the resource is depleted they will be useless.
+
+ \section{Nuclear Power}
+
+ Nuclear power,  maybe the most desired power source on the planet, is capable of producing tremendous 
+ amounts of power for doing little work. All nuclear power plants today run off of fission, the process of 
+ breaking up atoms into smaller ones and the magical element that nuclear plants run off of is Uranium. 
+ Uranium has nice properties for being broken apart, one being that large amounts of energy are released 
+ when fission is performed on it and this energy is given off in the form of heat. Just like fossil fuel 
+ power plants, nuclear power plants operate by taking this heat, heating water into steam, using the steam 
+ to turn a turbine and then the turbine turns a generator.
+
+Of course the process of getting the heat is dramatically different. In the reactor of a nuclear power 
+plant there are uranium rods, these fuel the plant. The rods are bombarded with nuclei that break apart the 
+uranium when they collide. Essentially it's like breaking when playing pool. The cue ball is the nuclei and 
+the triangle of pool balls is the uranium atom. Instead of sound being released when a collision occurs, 
+heat gets released. The uranium rods are surrounded by water and this water absorbs the heat from the 
+fission reaction. Just like in fossil fuel power plants the water is kept under pressure so that it can be 
+heated to higher temperatures. Because this water is in direct contact with the radioactive core it is not 
+turned into steam and is instead sent through a series of pipes away from the reactor. This water never 
+leaves the pipes but is used to heat more water, safe water, that has outside contact with the pipes. From 
+here the process is the same as with fossil fuel power plants. This is shown in Figure \ref{nuclearCycle}.
+
+\begin{figure}[hbt]\label{nuclearCycle}
+  \begin{center}
+    \includegraphics[width=1\textwidth]{nuclear}
+    \caption[Nuclear Cycle]{Nuclear Cycle }
+  \end{center}
+\end{figure}
+
+Nuclear power plants needs this extra step because the water that has direct contact with the core is 
+radioactive and needs to be handled delicately. As a consequence it can't be in direct contact with other 
+parts of the plant. Nuclear power plants have little waste compared to fossil fuel plants but they do 
+produce radio active waste (left overs from the fission reaction) and it takes energy to mine the uranium, 
+refine it and transport it to the plant.
+
+Like fossil fuels, uranium is a element found in the earths crust and there is a finite amount of it. There 
+is far more uranium then all the fossil fuels combined and we are using it up at a slower rate but one day 
+we will run out and well weill have to find a new kind of power source for fission. 
+
+\newpage
+\section{Hydro Power}
+
+Hydro power can arguably be the cleanest source of power due to the fact that it has almost no 
+environmental effects once the plant is built. Like fossil fuels and nuclear power plants, hydro power 
+plants works by turning a turbine that is connected to a generator to produce power but instead of using 
+steam to push the turbine it uses liquid running water.
+
+The rule of thumb for hydro power is the faster the water flows the more power you can generate. This 
+creates a desire for big damns. The idea is that you damn a river causing the area above the damn 
+to flood. The water is held at bay by the damn. Inside the damn there is a generator and turbines connected 
+to it. The turbines are located in a shaft where water will flow. Once the shafts are open water runs 
+through them powered by gravity and the water pressure from the lake. The bigger the damn, the bigger the 
+lake, the more water pressure there is, the faster the flow of water, the more power generated. 
+Figure \ref{hydroCycle} shows this process. Damns don't burn 
+anything for fuel so there are no harmful environmental emissions once its running but damns usually 
+require a giant areas of land to be destroyed. This wipes out any wildlife living there at the time and 
+causes giant environmental shifts to wildlife. 
+
+There are some rare cases such as Niagara falls where hydro generators can be placed beneath the falls and 
+naturally falling water does the job with no assistance, so no damns need to be built. Finding a big enough 
+waterfall that can generate enough power near a populated area is rare so this is not the usual option when 
+creating a hydro electric damn. 
+
+\begin{figure}[hbt]\label{hydroCycle}
+  \begin{center}
+    \includegraphics[width=1\textwidth]{hydro}
+    \caption[Hydro Cycle]{Hydro Cycle }
+  \end{center}
+\end{figure}
+
+\newpage
+
+\section{Wind Power}
+
+Wind power has maybe the least environmental impact out of all the power sources. They use wind currents to 
+rotate giant blades that are in turn connected by a series of leavers and gears that are directly connected 
+to the generator. Figure \ref{windmillWorkings} shows this process. The current is then fed down the shaft 
+of the windmill and off to a population. Once constructed windmills essentially have no maintenance cost 
+and are practically self sustaining except for breakdowns. 
+
+Although windmills have minimal environmental effects they have drawbacks that they do not produce a lot of 
+power and that they take up large amounts of space. Windmills kill a fair amount of birds per year and 
+humans that live around them are no fan of the noise nor frequent shadows that they create. They are also 
+costly to build and can only be placed in windy locations to make them worth building. 
 \bigskip
 
-The exception, solar power. Solar Power works a little different, the general idea is that when beamsof 
-light hit the solar panels some of the energy from the light doesn’t get transferred into heat and is 
-instead transferred into the electrons. With their newly obtained energy the electrons become free and able 
-to move around. This makes a current possible and from here it is just a matter of extracting it.
+
+\begin{figure}[hbt]\label{windmillWorkings}
+  \begin{center}
+    \includegraphics[width=1\textwidth]{windmill}
+    \caption[Windmill Workings]{Windmill Workings }
+  \end{center}
+\end{figure}
+
+\newpage
+
+\section{Solar Power}
+Solar power is the one power source that works completely different from all the others. Most objects when 
+struct with light obsorb the incomming light rays and the energy gets converted into heat. Solar panels are made from a special substance, 
+usually silicon that when struct with light react differently. When the electrons in solar panels are 
+struct with light they get excited and they raise an energy level. When enough electrons are at high enough 
+energy levels they become loose and are able to move around. Solar panels are specially built so that part of the panel holds a positive charge and the other part holds a negative charge. This makes the loose electrons, in the negative part of the panel want to move to the positive section. This forms a current in the cell and from here all we have to do is redirect the current to where ever we want it. Figure 
+\ref{solarCell} shows this process. 
+
+Although solar panels have barely no maintenance cost, fit nicely on rooftops and have hardly no 
+environmental impacts they are the least efficient form of power, transforming  only about 20 percent of 
+the sunlight that hits them into usable electricity. Solar panels are also expensive to build and in order 
+to generate any significant amount of usable power from them for a mediocrely sized population, farms of 
+solar panels need to be built and this takes up a huge amount of space.  Another giant draw back is that 
+they only work during the day meaning another source of power is required for night time activities. 
 \bigskip
 
-It could be argued that nuclear power plants, fossil fuel plants and big hydro dams are these big complex 
-systems that generate our power for us but they all work off the one basic idea of moving a magnet through 
-a copper coil. This centuries old idea has fundamentally redirected the evolutionary direction of our 
-society today. 
+\begin{figure}[hbt]\label{solarCell}
+  \begin{center}
+    \includegraphics[width=1\textwidth]{solar}
+    \caption[Solar Cell Workings]{ Solar Cell Workigns}
+  \end{center}
+\end{figure}
 
+\newpage
 
 \chapter{The Sourse}
 
@@ -131,6 +292,14 @@ to represent the land that is currently available for the user to excavate. Once
 obtained and a power plant is built, energy can then be created and supplied to the population.
 \bigskip
 
+\begin{figure}[hbt]
+  \begin{center}
+    \includegraphics[width=0.9\textwidth]{DFDDiagram}
+    \caption[Figure 1]{\label{DFD Diagram} }
+  \end{center}
+\end{figure}
+
+
 Another option that the user has is that he/she can purchase advertisements or public services to help 
 him/her flourish in the simulation. For example, a user could purchase an advertisement that educates the 
 population to not waste power. This advertisement would reduce the usage of power and allow the user to 
@@ -139,14 +308,8 @@ survey the land and tell the user where to mine for a specific resource. Both of
 influence groups within the game, such as environmentalists or public opinion. 
 \bigskip
 
-Users choices in the game affect groups as well, for example if a user invested in coal fueled power plants then the environmentalists group would not be displeased. Groups provide small perks or punishments to the user, usually in the form of grants or fines, which are dependent on the users play style and choices within the simulation. 
 
-\begin{figure}[ht]
-  \begin{center}
-    \includegraphics[width=1\textwidth]{DFDDiagram}
-    \caption[Figure 1]{\label{DFD Diagram} }
-  \end{center}
-\end{figure}
+Users choices in the game affect groups as well, for example if a user invested in coal fueled power plants then the environmentalists group would not be displeased. Groups provide small perks or punishments to the user, usually in the form of grants or fines, which are dependent on the users play style and choices within the simulation. 
 
 
 \section{Screen Layout}
