--- a/ubcothesis/ubc_2015_spring_kudlac_raffi.tex
+++ b/ubcothesis/ubc_2015_spring_kudlac_raffi.tex
@@ -99,24 +99,16 @@ much energy as fossil fuels. The users' main objective is to survive for as long
 their previous time. 
 
 \chapter{Energy Today}
-  In our society today almost all our energy that runs our homes and businesses is created in the same way 
-It could be argued that, Micheal Faraday, the inventor of the concept of the generator had the biggest 
-effect on the development of our society. In the early 1800's Micheal discovered that a magnet traveling 
-through a coiled wire could generate a current and that once a current was generated it could be redirected 
+  In our society almost all of our energy that powers our homes and businesses is created in the same way. 
+It could be argued that Michael Faraday, the inventor of the concept of the generator, had the biggest 
+effect on the development of our society. In the early 1800's Michael discovered that a magnet traveling 
+through a coiled wire could generate a current and once a current was generated it could be redirected 
 to wherever it was needed. This concept is at the core of all our power generation.
 
 \section{Generators}
   
-  All generators operate in the same way of transferring kinetic energy into electrical energy. Some do 
-  this buy having a stationary coil and moving a magnet through the coil as shown below or some have a 
-  stationary magnet and move a coil through the magnetic field created by the magnet. It doesn't matter 
-  which method is used, the same rules of physics are being applied and both ways achieve the result of a 
-  flowing current. The faster the movement of the coil or magnet the more current that will be generated. 
-  The more current that is generated to power there is to use. Generators have a couple more components to 
-  them, gas chambers, rotating pistons ect.. these are all just tools used to convert the potential energy 
-  of the power sourse into kinetic energy and finally into the desired electrical energy. This is at the 
-  heart of all major production methods of power 
-  as discussed below. 
+  All generators operate in the same fashion, transferring kinetic energy into electrical energy. Some generators perform this transference by having a stationary coil and moving a magnet through the coil as shown below, while other generators have stationary magnets and move the coil through the magnetic field generated between two magnets. It doesn't matter which method is used, the same rules of physics are being applied and both ways achieve the result of a flowing current. The faster the movement of the coil or magnet the more current will be generated. 
+  The more current that is generated the more power there is to use. Generators have a couple more components to them including, but not limited to, gas chambers and rotating pistons. These components are all just tools used to convert the potential energy of the power source into kinetic energy and finally into the desired electrical energy. This concept is the heart of all major methods of power production.
 
   \begin{figure}[hbt]{\label{Induction} }
   \begin{center}
@@ -128,19 +120,10 @@ to wherever it was needed. This concept is at the core of all our power generati
 \newpage
   \section{Fossil Fuels}
 
-  All Fossil fuel plants work in the same way, they burn a substance to heat water, that is turned into 
-  steam that is then fed to flow past a turbine. The steam pushes the turbine which is connected to a 
-  generator. This feeds kinetic energy to the generator which then turns the energy into electrical energy 
-  for people to use.
+  All Fossil fuel plants operate in the same way; they burn a substance to heat water that is turned into 
+  steam and that steam is then fed to flow past a turbine. The steam pushes the turbine which is connected to a generator. This motion feeds kinetic energy to the generator which then turns the energy into electrical energy for people to use.
 
-Fossil fuel plants only differ in the substance that they burn, and some different protocols and buildings 
-to handle the substances but the process is the same for all. Once the substance is burned the heat is 
-transferred into water. In order to obtain as much energy as possible the water is kept under pressure 
-making it able to be heated to temperatures much higher then $100^\circ$ C. Once the water is at a 
-desired temperature it is fed through a series of pipes where it enters another chamber. In this chamber 
-the water leaves the pipes at extraordinary speeds and instantly turned into steam as the pressure keeping 
-the water in liquid form is being released. The fast moving steam pushes against a turbine causing it to 
-move. In turn components in the generator are being turned and a current in generated. This is shown in figure \ref{FossilFuelCycle} which specifically shows the process of a coal power plant. 
+Fossil fuel plants have one specific difference, which is in the substance that they burn and the different protocols and buildings erected to handle the substances. Other than this difference the process is the same for all plants. Once the substance has been burned the heat is transferred into water. In order to obtain as much energy as possible the water is kept under pressure making it able to be heated to temperatures much higher then $100^\circ$ C. Once the water is at the desired temperature it is fed through a series of pipes from which it enters another chamber. In this chamber the water leaves the pipes at extraordinary speeds and is turned into steam instantaneously as the pressure keeping the water in liquid state is released. The fast moving steam pushes against a turbine causing it to move, and in turn causing the components in the generator to be moved and thus a current is generated. This is shown in figure \ref{FossilFuelCycle} which specifically shows the process of a coal power plant. 
 
    \begin{figure}[hbt] \label{FossilFuelCycle} 
   \centering    
@@ -153,23 +136,14 @@ move. In turn components in the generator are being turned and a current in gene
 
 In order to save water the steam is collected and condensed back into water to be used again. Plants are 
 usually built around a water source as water needs to switched out at times to cool components of the plant 
-and since plants use water to function it convientient to have a water source close by.
- When water gets cycled out of the plant and back into the water source it is warm and can have negative 
- effects on wildlife. Imagine if someone cranked the heating in your house to $40^\circ$ C, how would you 
- like it?
+and since plants use water to function it is convientient to have a water source close by. When water gets cycled out of the plant and back into the water source it is warm and can have negative effects on wildlife.Imagine if someone cranked the thermostat in your house to $40^\circ$ C, how would you like it?
 
-Fossil fuel power plant generally produce large amounts of power and the price of fossil fuels is generally 
-cheap but they have huge environmental consequences such as carbon dioxide. Fossil fuel plants also run on 
-a limited resource and once the resource is depleted they will be useless.
+Fossil fuel power plants generally produce large amounts of power and the price of fossil fuels is generally cheap, but they have huge environmental consequences such as carbon dioxide. Fossil fuel plants also run on a limited resource and once the resource is depleted they will be useless.
 
  \section{Nuclear Power}
 
- Nuclear power,  maybe the most desired power source on the planet, is capable of producing tremendous 
- amounts of power for doing little work. All nuclear power plants today run off of fission, the process of 
- breaking up atoms into smaller ones and the magical element that nuclear plants run off of is Uranium. 
- Uranium has nice properties for being broken apart, one being that large amounts of energy are released 
- when fission is performed on it and this energy is given off in the form of heat. Just like fossil fuel 
- power plants, nuclear power plants operate by taking this heat, heating water into steam, using the steam 
+ Nuclear power may be the most desired power source on the planet. Nuclear power is capable of producing tremendous amounts of power for doing little work. All nuclear power plants today run off of fission, the process of breaking up atoms into smaller ones. The element that nuclear plants run off of is Uranium. Uranium has nice properties for being broken apart, one property being that large amounts of energy are released when fission occurs and this energy is given off in the form of heat. Just like fossil fuel 
+ power plants nuclear power plants operate by taking this heat, heating water into steam, using the steam 
  to turn a turbine and then the turbine turns a generator.
 
 Of course the process of getting the heat is dramatically different. In the reactor of a nuclear power 
@@ -190,39 +164,28 @@ here the process is the same as with fossil fuel power plants. This is shown in 
   \end{center}
 \end{figure}
 
-Nuclear power plants needs this extra step because the water that has direct contact with the core is 
+Nuclear power plants need this extra step because the water that has direct contact with the core is 
 radioactive and needs to be handled delicately. As a consequence it can't be in direct contact with other 
 parts of the plant. Nuclear power plants have little waste compared to fossil fuel plants but they do 
 produce radio active waste (left overs from the fission reaction) and it takes energy to mine the uranium, 
 refine it and transport it to the plant.
 
-Like fossil fuels, uranium is a element found in the earths crust and there is a finite amount of it. There 
-is far more uranium then all the fossil fuels combined and we are using it up at a slower rate but one day 
-we will run out and well weill have to find a new kind of power source for fission. 
+Like fossil fuels, uranium is a element found in the Earth's crust and there is a finite amount of it. There is far more uranium than all the fossil fuels combined and we are using it up at a slower rate but one day we will run out and science will have to find a new kind of power source for fission. 
 
 \newpage
 \section{Hydro Power}
 
-Hydro power can arguably be the cleanest source of power due to the fact that it has almost no 
+Hydro power, arguably, can be the cleanest source of power because it has almost no 
 environmental effects once the plant is built. Like fossil fuels and nuclear power plants, hydro power 
-plants works by turning a turbine that is connected to a generator to produce power but instead of using 
-steam to push the turbine it uses liquid running water.
+plants work by turning a turbine that is connected to a generator to produce power. The difference between the two previously mentioned plant and hydro plants is that hydro plants, instead of using 
+steam to push turbines, use liquid running water.
 
-The rule of thumb for hydro power is the faster the water flows the more power you can generate. This 
-creates a desire for big damns. The idea is that you damn a river causing the area above the damn 
-to flood. The water is held at bay by the damn. Inside the damn there is a generator and turbines connected 
-to it. The turbines are located in a shaft where water will flow. Once the shafts are open water runs 
-through them powered by gravity and the water pressure from the lake. The bigger the damn, the bigger the 
-lake, the more water pressure there is, the faster the flow of water, the more power generated. 
-Figure \ref{hydroCycle} shows this process. Damns don't burn 
-anything for fuel so there are no harmful environmental emissions once its running but damns usually 
-require a giant areas of land to be destroyed. This wipes out any wildlife living there at the time and 
-causes giant environmental shifts to wildlife. 
+The rule of thumb for hydro power is that the faster the water flows the more power you can generate. This 
+creates a desire for big dams. The idea is that you dam a river causing the area above the dam 
+to flood and this flood water is held at bay by the dam. Within the dam there is a generator and turbines and the turbines are located in a shaft where water will flow. Once the shafts have been opened the water runs through the turbines using gravity and the water pressure from the lake. The bigger the dam is, the bigger the lake created will be, the more water pressure there will be, the faster the water will flow, and the more power will be generated. 
+Figure \ref{hydroCycle} shows this process. Dams don't burn any kind of resource for fuel so there are no harmful environmental emissions once the dam is running. One downside of dams is that their construction usually requires large areas of land to be destroyed. This destruction wipes out any wildlife living there at the time and causes environmental shifts to natural eco-systems. 
 
-There are some rare cases such as Niagara falls where hydro generators can be placed beneath the falls and 
-naturally falling water does the job with no assistance, so no damns need to be built. Finding a big enough 
-waterfall that can generate enough power near a populated area is rare so this is not the usual option when 
-creating a hydro electric damn. 
+There are some rare cases, such as Niagara Falls, where hydro generators can be placed beneath the falls and naturally falling water does the job with no assistance and no dams need to be built. Finding a big enough waterfall that can generate enough power near a populated area is rare so this is not the usual option when creating a hydro-electric dam. 
 
 \begin{figure}[hbt]\label{hydroCycle}
   \begin{center}
@@ -235,16 +198,9 @@ creating a hydro electric damn.
 
 \section{Wind Power}
 
-Wind power has maybe the least environmental impact out of all the power sources. They use wind currents to 
-rotate giant blades that are in turn connected by a series of leavers and gears that are directly connected 
-to the generator. Figure \ref{windmillWorkings} shows this process. The current is then fed down the shaft 
-of the windmill and off to a population. Once constructed windmills essentially have no maintenance cost 
-and are practically self sustaining except for breakdowns. 
+Wind power has maybe the least environmental impact out of all of the power sources. They use wind currents to rotate giant blades that are connected by a series of levers and gears to the generator. Figure \ref{windmillWorkings} shows this process. The current is then fed down the shaft of the windmill and off to a population. Once constructed windmills essentially have no maintenance cost and are practically self-sustaining except for when breakdowns occur and maintenance is performed. 
 
-Although windmills have minimal environmental effects they have drawbacks that they do not produce a lot of 
-power and that they take up large amounts of space. Windmills kill a fair amount of birds per year and 
-humans that live around them are no fan of the noise nor frequent shadows that they create. They are also 
-costly to build and can only be placed in windy locations to make them worth building. 
+Although windmills have minimal environmental effects they have five noticeable drawbacks. The first drawback is that they do not produce a large amount of power. The second drawback is that that they take up large amounts of space. Third, windmills have been known to be a cause of death to birds. Fourth, humans that live around windmills are generally displeased with the appearance, noise and frequent shadows that they create. Finally, windmills are also costly to build and can only be placed in windy locations to make them worth building. 
 \bigskip
 
 
@@ -258,19 +214,12 @@ costly to build and can only be placed in windy locations to make them worth bui
 \newpage
 
 \section{Solar Power}
-Solar power is the one power source that works completely different from all the others. Most objects when 
-struct with light obsorb the incomming light rays and the energy gets converted into heat. Solar panels are made from a special substance, 
-usually silicon that when struct with light react differently. When the electrons in solar panels are 
-struct with light they get excited and they raise an energy level. When enough electrons are at high enough 
-energy levels they become loose and are able to move around. Solar panels are specially built so that part of the panel holds a positive charge and the other part holds a negative charge. This makes the loose electrons, in the negative part of the panel want to move to the positive section. This forms a current in the cell and from here all we have to do is redirect the current to where ever we want it. Figure 
+Solar power is the one power source that works in a completely different fashion from all of the others. When most objects are struck with rays of light, they absorb the incoming rays and convert this energy into heat. Solar panels are made from a special substance, primarily silicon, and when this substance is struck with light it tends to react differently than most objects. When the electrons in solar panels are 
+struck with light they become excited and they raise the energy level. When enough electrons are at high enough energy levels they become loose and are able to move around. Solar panels are specially built so that part of the panel holds a positive charge and the other part holds a negative charge. This polarization makes the loose electrons in the negative part of the panel want to move to the positive section. This motion forms a current in the cell and then the current can be redirected to where ever it is needed. Figure 
 \ref{solarCell} shows this process. 
 
-Although solar panels have barely no maintenance cost, fit nicely on rooftops and have hardly no 
-environmental impacts they are the least efficient form of power, transforming  only about 20 percent of 
-the sunlight that hits them into usable electricity. Solar panels are also expensive to build and in order 
-to generate any significant amount of usable power from them for a mediocrely sized population, farms of 
-solar panels need to be built and this takes up a huge amount of space.  Another giant draw back is that 
-they only work during the day meaning another source of power is required for night time activities. 
+Solar panels have little to no maintenance cost, they fit nicely on rooftops, and they have hardly no 
+environmental impacts. Unfortunately, solar panels are the least efficient form of generating power, transforming  only about 20 percent of the sunlight that hits them into usable electricity. Solar panels are also expensive to build and in order to generate any significant amount of usable power from them, say enough to power amoderately sized population, farms of solar panels need to be built which take up huge amounts of space. Another drawback of solar panels is that they can only function during the day while the sun is up, which means that another source of power is required for night time activities. 
 \bigskip
 
 \begin{figure}[hbt]\label{solarCell}
@@ -282,7 +231,7 @@ they only work during the day meaning another source of power is required for ni
 
 \newpage
 
-\chapter{The Sourse}
+\chapter{The Source}
 
 The design of the system, as illustrated in figure 3.1 below, is straightforward. The user interacts with 
 the system by purchasing power plants. This is done on a designated screen when there is land for the user 
