making progress on thesis

--- a/ubcothesis/bibliography.bib
+++ b/ubcothesis/bibliography.bib
@@ -1,12 +1,59 @@
-@webpage{Fear:2005manual,
-	Author = {Fear, Simon},
-	Date-Added = {2010-04-18 21:39:26 -0700},
-	Date-Modified = {2010-04-18 21:42:24 -0700},
-	Lastchecked = {April 18, 2010},
-	Title = {Publication quality tables in {LaTeX}},
-	Url = {http://www.ctan.org/tex-archive/macros/latex/contrib/booktabs/booktabs.pdf},
-	Year = {2005}
+@webpage{Current,
+  Author = {Unknown Author},
+	Date-Added = {October 2, 2014},	
+	Lastchecked = {October 2, 2015},
+	Title = {Magnetic Fields Tutorial 5 - Electromagnetic Induction},
+	Url = {http://www.antonine-education.co.uk/Pages/Physics_4/Magnetism/MAG_05/Mag_field_5.htm},
+	Year = {2015},
 }
+
+@webpage{Coal,
+  Author = {Unknown Author},
+  Date-Added = {October 3, 2014},  
+  Lastchecked = {February 6, 2015},
+  Title = {Fossil fuel power station},
+  Url = {http://en.wikipedia.org/wiki/Fossil-fuel\_power\_station},
+  Year = {2015}
+}
+
+@webpage{Nuclear,
+  Author = {Unknown Author},
+  Date-Added = {October 3, 2014},  
+  Lastchecked = {February 5, 2015},
+  Title = {How Nuclear Power Works},
+  Url = {http://www.ucsusa.org/nuclear_power/nuclear_power_technology/how-nuclear-power-works.html\#.VRXHJbPF8Wc},
+  Year = {2015}
+}
+
+
+@webpage{Hydro,
+  Author = {Unknown Author},
+  Date-Added = {October 21, 2014},  
+  Lastchecked = {February 5, 2015},
+  Title = {River deltas show electrical potential},
+  Url = {http://wordchemist.com/scienceblog},
+  Year = {2015}
+}
+
+@webpage{Wind,
+  Author = {Unknown Author},
+  Date-Added = {October 23, 2014},  
+  Lastchecked = {February 7, 2015},
+  Title = {Lesson 7: Around and Around They Go},
+  Url = {http://www.powersleuth.org/teacher/energy-lights/lesson7-overview},
+  Year = {2015}
+}
+
+@webpage{Solar,
+  Author = {Unknown Author},
+  Date-Added = {March 25, 2015},  
+  Lastchecked = {March 25, 2015},
+  Title = {Photovoltaic Array Fundamentals},
+  Url = {http://etap.com/renewable-energy/photovoltaic-101.htm},
+  Year = {2015}
+}
+
+
 
 @book{Hiriart-Urruty:1993-ConvexAnalysis,
 	Author = {Hiriart-Urruty, Jean-Baptiste and Lemar{\'e}chal, Claude},
