Repush without videos

--- a/ubcothesis/bibliography.bib
+++ b/ubcothesis/bibliography.bib
@@ -53,7 +53,51 @@
   Year = {2015}
 }
 
+@webpage{CityIsland2,
+  Author = {Sparkling Society™},
+  Date-Added = {February 10, 2015},  
+  Lastchecked = {February 10, 2015},
+  Title = {City Island 2},
+  Url = {https://play.google.com/store/apps/details?id=com.sparklingsociety.cityisland2&hl=en},
+  Year = {2015}
+}
 
+@webpage{MoonBase,
+  Author = {Marc Bechamp},
+  Date-Added = {February 11, 2015},  
+  Lastchecked = {February 11, 2015},
+  Title = {Moon Base},
+  Url = {https://play.google.com/store/apps/details?id=jeu.de.marc&hl=en},
+  Year = {2015}
+}
+
+@webpage{Megapolis,
+  Author = {Social Quantum Ltd},
+  Date-Added = {February 11, 2015},  
+  Lastchecked = {February 11, 2015},
+  Title = {Megapolis},
+  Url = {https://play.google.com/store/apps/details?id=com.socialquantum.acityint&hl=en},
+  Year = {2015}
+}
+
+@webpage{SavetheWorld,
+  Author = {Wonderville},
+  Date-Added = {February 10, 2015},  
+  Lastchecked = {February 10, 2015},
+  Title = {Save the World},
+  Url = {http://www.wonderville.ca/asset/save-the-world},
+  Year = {2015}
+} 
+
+
+@webpage{Energyville,
+  Author = {Cheveron},
+  Date-Added = {February 10, 2015},  
+  Lastchecked = {February 10, 2015},
+  Title = {Energyville},
+  Url = {http://www.energyville.com/energyville/},
+  Year = {2015}
+} 
 
 @book{Hiriart-Urruty:1993-ConvexAnalysis,
 	Author = {Hiriart-Urruty, Jean-Baptiste and Lemar{\'e}chal, Claude},
